# gogame-term

./: Cargo.toml  README.md
src/: main.rs  renderer.rs
src/core/: config.rs  engine.rs  entities.rs  errors.rs  helpers.rs  logger.rs  mod.rs  theme.rs
src/gogame/: board.rs  game_message.rs  gogame.rs  mod.rs
src/view/: events.rs  mod.rs
src/view/board/: board_controller.rs  board_table.rs  mod.rs  theme.rs
src/view/tui/: renderer.rs
