cargo-features = ["strip"]

[package]
name = "gogame-term"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtp = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
directories = "4.0"
log = "0.4.14"
simplelog = "0.10.1"
clap = "2.33.3"
read_color = "1.0.0"
tui = "0.16.0"
termion = "1.5.6"

[profile.release]
lto = true
strip = true
